# vc-viewer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  captain-definition.json  clean.sh  crates.js  docker-compose.yml  help.html  index.html  run.sh  search-index.js  settings.html  src-files.js
.github/workflows/: audit.yml  build.yml  docs.yml  test.yml
.specstory/history/: visualizing-w3c-verifiable-credentials-app.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/config/: env.rs  mod.rs
backend/src/handlers/: errors.rs  health.rs  mod.rs  pages.rs
backend/src/middleware/: compression.rs  mime.rs  mod.rs
backend/src/templates/: mod.rs
backend/src/utils/: mod.rs
backend/tests/: integration_test.rs
frontend/: copy-assets.js  package-lock.json  package.json
frontend/.parcel-cache/: 3a9a091a3ff34b46-BundleGraph  68c1f8062645ff13-RequestGraph  ad3dbad466b36b84-RequestGraph  af7056fc4e5128ee-AssetGraph  b369cf3b7a7c4de5-BundleGraph  data.mdb  ea6d9a38a62a6a28-AssetGraph  lock.mdb  snapshot-68c1f8062645ff13.txt  snapshot-ad3dbad466b36b84.txt
search.desc/vc_viewer/: vc_viewer-desc-0-.js
src/vc_viewer/: lib.rs.html
trait.impl/actix_service/: trait.Service.js
trait.impl/lazy_static/: trait.LazyStatic.js
vc_viewer/: all.html  index.html  sidebar-items.js
vc_viewer/config/: index.html  sidebar-items.js  struct.Config.html
vc_viewer/handlers/: enum.AppError.html  fn.handle_template_error.html  index.html  sidebar-items.js
vc_viewer/middleware/: index.html  sidebar-items.js  (+2 more)
(+119 files in other folders)
