[package]
name = "vc-viewer"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = { version = "4.0", features = ["compress-brotli", "compress-gzip"] }
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
num_cpus = "1.16"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 